fix alignment on desktop

--- a/src/views/common/top-artist/style.css
+++ b/src/views/common/top-artist/style.css
@@ -31,7 +31,6 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
 }
 
 .top-card-description {
@@ -136,6 +135,10 @@
     height: fit-content;
     margin-bottom: 40px;
     overflow-wrap: anywhere;
+  }
+
+  .top-card-primary {
+    align-items: center;
   }
 
   .top-card-image {
